[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/Icons/MD_concept.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/NoteTaking.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/TimeTracking.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/ToDo.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Sidebar.gd" type="Script" id=5]
[ext_resource path="res://Assets/Buttons/AppBar/MaximizeBtn.png" type="Texture" id=6]
[ext_resource path="res://Assets/Themes/CuteButtonTheme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Buttons/AppBar/ExitBtn.png" type="Texture" id=8]
[ext_resource path="res://Scripts/CustomTextureButton.gd" type="Script" id=9]
[ext_resource path="res://Scripts/TopArea.gd" type="Script" id=10]
[ext_resource path="res://Scripts/CustomTransparentButton.gd" type="Script" id=11]
[ext_resource path="res://Assets/Views/Dashboard.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Views/Game.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Views/TimeTracking.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Views.gd" type="Script" id=16]
[ext_resource path="res://Assets/Buttons/Resize.png" type="Texture" id=17]
[ext_resource path="res://Assets/Icons/Profile.png" type="Texture" id=18]
[ext_resource path="res://Assets/Views/Notes.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Fonts/Righteous50.tres" type="DynamicFont" id=20]
[ext_resource path="res://Assets/Themes/Roboto12Clean.tres" type="Theme" id=21]
[ext_resource path="res://Assets/Views/ToDo.tscn" type="PackedScene" id=22]
[ext_resource path="res://Assets/Fonts/Righteous20.tres" type="DynamicFont" id=23]
[ext_resource path="res://Assets/Themes/Dark/PanelSuperDarkGreen.tres" type="StyleBox" id=24]
[ext_resource path="res://Scripts/Views/Profile.gd" type="Script" id=27]
[ext_resource path="res://Scripts/ResizeBtn.gd" type="Script" id=32]
[ext_resource path="res://Assets/Buttons/AppBar/MinimizeBtn.png" type="Texture" id=33]
[ext_resource path="res://Assets/Icons/Settings.png" type="Texture" id=34]
[ext_resource path="res://Assets/Views/TimeTrackingPanel.tscn" type="PackedScene" id=35]
[ext_resource path="res://Assets/Views/Settings.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scripts/Shortcuts.gd" type="Script" id=37]
[ext_resource path="res://Assets/Themes/Dark/LineEditTop.tres" type="StyleBox" id=38]
[ext_resource path="res://Assets/Fonts/NovaMono20.tres" type="DynamicFont" id=39]
[ext_resource path="res://Assets/Fonts/Righteous-Regular.ttf" type="DynamicFontData" id=40]
[ext_resource path="res://Assets/Themes/Dark/PanelDarkGreen.tres" type="StyleBox" id=43]
[ext_resource path="res://Assets/Themes/Dark/PanelGreen.tres" type="StyleBox" id=44]
[ext_resource path="res://Assets/Themes/Dark/PanelGreenNoBorder.tres" type="StyleBox" id=45]
[ext_resource path="res://Assets/Icons/gamepad.png" type="Texture" id=46]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.219355, 0.36129, 1 )
colors = PoolColorArray( 0.839844, 0.839844, 0.839844, 0, 0.910156, 0.910156, 0.910156, 1, 0.867188, 0.867188, 0.867188, 0.529412, 0.855469, 0.855469, 0.855469, 0 )

[sub_resource type="DynamicFont" id=25]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 40 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0862745, 0.152941, 0.160784, 1 )

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainWorkspace" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBX" type="HBoxContainer" parent="MainWorkspace"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="Panel" parent="MainWorkspace/HBX" groups=["UI_THEME"]]
margin_right = 50.0
margin_bottom = 650.0
rect_min_size = Vector2( 50, 0 )
custom_styles/panel = ExtResource( 44 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MainWorkspace/HBX/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -104.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/Buttons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 140.0
margin_right = 36.0
margin_bottom = 190.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "Dashboard"

[node name="NotesBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/Buttons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 194.0
margin_right = 36.0
margin_bottom = 244.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "Notes"

[node name="TimeTrackingBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/Buttons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 248.0
margin_right = 36.0
margin_bottom = 298.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "TimeTracking"

[node name="TodosBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/Buttons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 302.0
margin_right = 36.0
margin_bottom = 352.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "ToDo"

[node name="GameBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/Buttons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 356.0
margin_right = 36.0
margin_bottom = 406.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 46 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "Game"

[node name="BotButtons" type="VBoxContainer" parent="MainWorkspace/HBX/Sidebar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -114.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/BotButtons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_right = 36.0
margin_bottom = 50.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "Profile"
bottom = true

[node name="SettingsBtn" type="TextureButton" parent="MainWorkspace/HBX/Sidebar/BotButtons"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_left = 13.0
margin_top = 54.0
margin_right = 36.0
margin_bottom = 104.0
rect_min_size = Vector2( 23, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
group = SubResource( 3 )
texture_normal = ExtResource( 34 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
target = "Settings"
bottom = true

[node name="SelectionBox" type="ColorRect" parent="MainWorkspace/HBX/Sidebar"]
margin_top = 695.992
margin_right = 2.0
margin_bottom = 745.992
rect_min_size = Vector2( 2, 50 )
color = Color( 0.854902, 0.423529, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles" type="CPUParticles2D" parent="MainWorkspace/HBX/Sidebar/SelectionBox"]
modulate = Color( 0.854902, 0.423529, 0.384314, 1 )
show_behind_parent = true
position = Vector2( 54.7194, 27.3138 )
rotation = -1.5708
amount = 16
speed_scale = 0.2
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
direction = Vector2( 0, 1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 94.74
angle = 720.0
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 1.0
color_ramp = SubResource( 4 )

[node name="Tween" type="Tween" parent="MainWorkspace/HBX/Sidebar"]

[node name="TimeTrackingPanel" parent="MainWorkspace/HBX" instance=ExtResource( 35 )]
margin_right = 50.0

[node name="VBX" type="VBoxContainer" parent="MainWorkspace/HBX"]
margin_left = 50.0
margin_right = 1100.0
margin_bottom = 650.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="TopArea" type="Control" parent="MainWorkspace/HBX/VBX"]
margin_right = 1050.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
theme = ExtResource( 21 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="MainWorkspace/HBX/VBX/TopArea"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="MainWorkspace/HBX/VBX/TopArea"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = -20.0
margin_right = 88.5
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="HBoxContainer" parent="MainWorkspace/HBX/VBX/TopArea"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_right = 14.0
margin_bottom = 45.0
rect_min_size = Vector2( 14, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTrackPanel" type="TextureButton" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 14.0
margin_right = 33.101
margin_bottom = 45.0
rect_min_size = Vector2( 19.101, 0 )
toggle_mode = true
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Control3" type="Control" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 33.0
margin_right = 46.0
margin_bottom = 45.0
rect_min_size = Vector2( 13, 0 )

[node name="TimeTrackTime" type="Label" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
visible = false
margin_left = 46.0
margin_top = 8.0
margin_right = 146.0
margin_bottom = 37.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 39 )
text = "00:00:00"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBtn" type="Button" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 46.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 35.024
rect_min_size = Vector2( 50, 27.024 )
focus_mode = 0
size_flags_vertical = 4
theme = ExtResource( 7 )
text = "NEW"

[node name="LineEdit" type="LineEdit" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 96.0
margin_top = 8.0
margin_right = 296.0
margin_bottom = 35.1
rect_min_size = Vector2( 200, 27.1 )
focus_mode = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 38 )
placeholder_text = "type text here"

[node name="Panel" type="Panel" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 296.0
margin_right = 496.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 35 )
custom_styles/panel = ExtResource( 24 )

[node name="Label" type="Label" parent="MainWorkspace/HBX/VBX/TopArea/Left/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -9.5
margin_right = 91.5
margin_bottom = 9.5
text = "Custom text : 10:00:32"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MainWorkspace/HBX/VBX/TopArea/Left"]
margin_left = 496.0
margin_right = 1050.0
margin_bottom = 45.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Right" type="HBoxContainer" parent="MainWorkspace/HBX/VBX/TopArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 728.0
margin_top = 7.0
margin_right = -15.0
margin_bottom = -6.0
grow_horizontal = 0
mouse_filter = 2
custom_constants/separation = 14
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimuze" type="TextureButton" parent="MainWorkspace/HBX/VBX/TopArea/Right"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 242.0
margin_right = 254.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
texture_normal = ExtResource( 33 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Maximize" type="TextureButton" parent="MainWorkspace/HBX/VBX/TopArea/Right"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 268.0
margin_right = 280.0
margin_bottom = 32.0
rect_min_size = Vector2( 12, 0 )
toggle_mode = true
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Exit" type="TextureButton" parent="MainWorkspace/HBX/VBX/TopArea/Right"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 294.0
margin_right = 307.0
margin_bottom = 32.0
rect_min_size = Vector2( 13, 0 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="MainWorkspace/HBX/VBX/TopArea"]

[node name="ViewLabel" type="Label" parent="MainWorkspace/HBX/VBX/TopArea"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -31.5
margin_right = 69.0
margin_bottom = 31.5
custom_colors/font_color = Color( 0, 0, 0, 0.25098 )
custom_fonts/font = SubResource( 25 )
text = "Notes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Views" type="MarginContainer" parent="MainWorkspace/HBX/VBX"]
margin_top = 45.0
margin_right = 1050.0
margin_bottom = 650.0
size_flags_vertical = 3
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dashboard" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 12 )]
visible = false
margin_right = 1050.0
margin_bottom = 605.0
title = "Mad Productivity"

[node name="Notes" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 19 )]
visible = false
margin_right = 1050.0
margin_bottom = 605.0
title = "Notes"

[node name="TimeTracking" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 14 )]
visible = false
margin_right = 1050.0
margin_bottom = 605.0
title = "Time tracking"

[node name="ToDo" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 22 )]
visible = false
margin_right = 1050.0
margin_bottom = 605.0
title = "TODO"

[node name="Game" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 13 )]
visible = false

[node name="Profile" type="Control" parent="MainWorkspace/HBX/VBX/Views"]
visible = false
margin_right = 1050.0
margin_bottom = 605.0
script = ExtResource( 27 )
title = "Profile"

[node name="VBoxContainer" type="VBoxContainer" parent="MainWorkspace/HBX/VBX/Views/Profile"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserName" type="LineEdit" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer"]
margin_top = 256.0
margin_right = 1050.0
margin_bottom = 319.0
custom_colors/font_color = Color( 0.854902, 0.423529, 0.384314, 1 )
custom_fonts/font = ExtResource( 20 )
custom_styles/read_only = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "USER NAME"
align = 1
caret_blink = true

[node name="UserTitle" type="LineEdit" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer"]
margin_top = 323.0
margin_right = 1050.0
margin_bottom = 349.0
custom_fonts/font = ExtResource( 23 )
custom_styles/read_only = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "USER TITLE"
align = 1
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer"]
visible = false
margin_top = 97.0
margin_right = 990.0
margin_bottom = 571.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer"]
visible = false
margin_top = 474.0
margin_right = 990.0
margin_bottom = 571.0
rect_min_size = Vector2( 0, 97 )
custom_styles/panel = SubResource( 16 )

[node name="ColorRect" type="ColorRect" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 0, 12 )
color = Color( 0.0588235, 0.105882, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel/ColorRect"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
margin_right = -600.0
grow_vertical = 0
rect_min_size = Vector2( 0, 12 )
color = Color( 0.854902, 0.423529, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel"]
margin_left = 20.0
margin_top = 12.0
margin_right = 523.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.854902, 0.423529, 0.384314, 1 )
custom_fonts/font = ExtResource( 20 )
text = "Level: 1"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel"]
margin_left = 462.385
margin_top = 12.0
margin_right = 965.385
margin_bottom = 75.0
custom_colors/font_color = Color( 0.576471, 0.627451, 0.631373, 0.615686 )
custom_fonts/font = ExtResource( 23 )
text = "23/1000pp"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.737255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title3" type="Label" parent="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/Panel/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.5
margin_top = -31.5
margin_right = 251.5
margin_bottom = 31.5
custom_colors/font_color = Color( 0.576471, 0.627451, 0.631373, 1 )
custom_fonts/font = ExtResource( 20 )
text = "TBD"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="MainWorkspace/HBX/VBX/Views" instance=ExtResource( 36 )]
visible = false
margin_bottom = 605.0

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="ResizeBtn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.7246
margin_top = -25.0397
margin_right = -4.72461
margin_bottom = -5.03967
action_mode = 0
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcuts" type="Node" parent="."]
script = ExtResource( 37 )

[connection signal="view_changed" from="MainWorkspace/HBX/Sidebar" to="." method="_on_Sidebar_view_changed"]
[connection signal="register_time_track_item" from="MainWorkspace/HBX/TimeTrackingPanel" to="MainWorkspace/HBX/VBX/Views/TimeTracking" method="_on_TimeTrackingPanel_register_time_track_item"]
[connection signal="gui_input" from="MainWorkspace/HBX/VBX/TopArea" to="MainWorkspace/HBX/VBX/TopArea" method="_on_TopArea_gui_input"]
[connection signal="toggle_time_tracking_bar" from="MainWorkspace/HBX/VBX/TopArea" to="MainWorkspace/HBX/TimeTrackingPanel" method="_on_TopArea_toggle_time_tracking_bar"]
[connection signal="toggled" from="MainWorkspace/HBX/VBX/TopArea/Left/TimeTrackPanel" to="MainWorkspace/HBX/VBX/TopArea" method="_on_TimeTrackPanel_toggled"]
[connection signal="pressed" from="MainWorkspace/HBX/VBX/TopArea/Left/NewBtn" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Button_pressed"]
[connection signal="pressed" from="MainWorkspace/HBX/VBX/TopArea/Right/Minimuze" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Minimuze_pressed"]
[connection signal="toggled" from="MainWorkspace/HBX/VBX/TopArea/Right/Maximize" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Maximize_toggled"]
[connection signal="pressed" from="MainWorkspace/HBX/VBX/TopArea/Right/Exit" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Exit_pressed"]
[connection signal="manual_view_toggle" from="MainWorkspace/HBX/VBX/Views" to="." method="_on_Views_manual_view_toggle"]
[connection signal="text_changed" from="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/UserName" to="MainWorkspace/HBX/VBX/Views/Profile" method="_on_UserName_text_changed"]
[connection signal="text_changed" from="MainWorkspace/HBX/VBX/Views/Profile/VBoxContainer/UserTitle" to="MainWorkspace/HBX/VBX/Views/Profile" method="_on_UserTitle_text_changed"]
[connection signal="mouse_entered" from="ResizeBtn" to="ResizeBtn" method="_on_ResizeBtn_mouse_entered"]
[connection signal="mouse_exited" from="ResizeBtn" to="ResizeBtn" method="_on_ResizeBtn_mouse_exited"]
[connection signal="pressed" from="ResizeBtn" to="ResizeBtn" method="_on_ResizeBtn_pressed"]
[connection signal="shortcut_focus" from="Shortcuts" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Shortcuts_shortcut_focus"]
[connection signal="shortcut_timetrack_panel" from="Shortcuts" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Shortcuts_shortcut_timetrack_panel"]
[connection signal="shortcut_use" from="Shortcuts" to="MainWorkspace/HBX/VBX/TopArea" method="_on_Shortcuts_shortcut_use"]
